--- a/webserver/rlnwebportal/main/templates/main/home.html
+++ b/webserver/rlnwebportal/main/templates/main/home.html
@@ -14,24 +14,25 @@
 		<div class="col-lg-10 offset-lg-1">
 			<div class="row">
 				<div class="col">
-					<!-- <a href="#" id="btnFilter"><i class="fa fa-filter" aria-hidden="true"></i> SEARCH FILTER  <i class="fa fa-chevron-right toggle-filter"></i></a> -->
+					<a href="#" id="btnFilter"><i class="fa fa-filter" aria-hidden="true"></i> SEARCH FILTER  <i class="fa fa-chevron-right toggle-filter"></i></a>
 				</div>
 			</div>
 			<div class="row filter-exp">
 				<div class="col pt-3" style="display: none;">
-					<div class="row">
+					<div class="row search-field">
 						<div class="col">
-							ID: <br/><input type="text" class="form-control"/> 
+							ID: <br/><input type="text" class="form-control" search="entry_id"/> 
 						</div>
 						<div class="col">
-							Name: <br/><input type="text" class="form-control"/> 
+							Name: <br/><input type="text" class="form-control" search="name"/> 
 						</div>
 						<div class="col-lg">
-							Address: <br/><input type="text" class="form-control"/> 
+							Address: <br/><input type="text" class="form-control" search="address"/> 
 						</div>
 						<div class="col-lg">
 							Status: 
-							<select class="form-control">
+							<select class="form-control" search="status" id="status-sel">
+								<option value="" selected></option>
 								<option value="1">Incomplete</option>
 								<option value="2">In Progress</option>
 								<option value="3">Completed</option>
@@ -40,8 +41,8 @@
 					</div>
 					<div class="row mt-3">
 						<div class="col">
-							<button type="button" class="btn btn-primary">Apply Filter</button>
-							<button type="button" class="btn btn-danger ml-4">Clear Filter</button>
+							<button type="button" class="btn btn-primary" onclick="searchFilter()">Apply Filter</button>
+							<button type="button" class="btn btn-danger ml-4" onclick="clearFilter()">Clear Filter</button>
 						</div>	
 					</div>
 				</div>
@@ -145,12 +146,40 @@
 		});
 	}
 
+	function searchFilter(){
+		filter={};
+		sel = $('#status-sel option:selected').val();
+		$('.search-field').children().children('input').each(function(){
+			value = $(this).val();
+			if(value){
+				key = $(this).attr("search");
+				filter[key]=value;
+			}
+		});
+		if(sel){
+			filter["status"]=sel;
+		}
+		fetchEntries(filter)
+	}
+
+	function clearFilter(){
+		$('.search-field').children().children('input').each(function(){
+			$(this).val("");
+		});
+		$('#status-sel >option:eq(0)').attr('selected', true);
+		fetchEntries();
+	}
+
 	function fetchEntries(filter){
-		if(!filter){
-			$.ajax({
+		q={};
+		if(filter){
+			q=filter;
+		}
+		$.ajax({
 			type: "GET",
 			url: "api/manageEntries",
 			dataType:'json',
+			data:q,
 			success: function(data){
 				if(!data['status']){
 					recv_arr = data['data'];
@@ -207,7 +236,7 @@
 						},
 						tooltipFormatter : function(value, template){
 							var json = JSON.parse(value);
-							var title = "Lon: <span>"+json['lon']+"</span></br>Lat: <span>"+json['lat']+"</span></br>Desc: <span>"+json['dsc']+"</span></br>"
+							var title = "Lon: <span>"+json['lon']+"</span></br>Lat: <span>"+json['lat']+"</span></br>Desc: <span>"+json['desc']+"</span></br>"
 							return "<span data-toggle='tooltip' title='"+title+"'' data-html='true'>"+json['id']+"</span>";
 						}
 					});
@@ -215,7 +244,6 @@
 				updateTables();
 			}     
 		});
-		}
 	}
 
 	function makePending(){
